RESOLVED FIXED22809
Increase URL Timeout in WinLauncher
https://bugs.webkit.org/show_bug.cgi?id=22809
Summary Increase URL Timeout in WinLauncher
Brent Fulgham
Reported 2008-12-11 10:15:03 PST
In recent months, the CG/CFNetwork build of WebKit seems to need more time to process URL requests. This is enough of a FAQ that it seems wise to increase the timeout in the "initWithURL" call so that people get expected behavior when they start up.
Attachments
Increase initWithURL timeout (1.20 KB, patch)
2008-12-11 10:21 PST, Brent Fulgham
aroben: review+
Brent Fulgham
Comment 1 2008-12-11 10:21:03 PST
Created attachment 25954 [details] Increase initWithURL timeout
Adam Roben (:aroben)
Comment 2 2008-12-11 10:23:37 PST
Comment on attachment 25954 [details] Increase initWithURL timeout r=me
Holger Freyther
Comment 3 2008-12-12 09:42:51 PST
Landed in r39245.
Note You need to log in before you can comment on or make changes to this bug.