2008-12-12  Brent Fulgham  <bfulgham@gmail.com>

Reviewed by Adam Roben.

        https://bugs.webkit.org/show_bug.cgi?id=22809

        Increase timeout in call to initWithURL so that people actually see
        new web pages when they type URLs rather than a blank screen.

        * WinLauncher/WinLauncher.cpp:
        (loadURL):  Increase timeout in initWithURL from 0 to 60 seconds.

Canonical link: https://commits.webkit.org/31449@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39245 268f45cc-cd09-0410-ab3c-d52691b4dbfc